shopfloor_dangerous_goods_mobile: fix css
When the product name is split on multiple lines
do not overlap with it and make sure the symbol
is displayed always at the end of the text.

--- a/shopfloor_dangerous_goods_mobile/static/wms/src/css/dangerous_goods.css
+++ b/shopfloor_dangerous_goods_mobile/static/wms/src/css/dangerous_goods.css
@@ -1,16 +1,10 @@
-.record-name {
-    position: relative;
-}
-
 .detail-picking-select .has-lq-products .record-name::after {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 0.9em;
+    height: 0.9em;
     background-image: url(limited_quantity_label.png);
     background-size: cover;
     background-position: center;
     content: " ";
-    position: absolute;
-    top: 1px;
-    right: -25px;
+    margin-left: 0.3em;
 }
